--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Locadora</title>
 </head>
 <body>
-    <header>Testando...</header>
+    <header>SoftMaker Locadora de Automóveis</header>
     <main>
         <button type="button" class="button" id="listarCarros">Listar Carros</button>
         <table class="tabela" id="tabelaCarros">
