--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/button.css">
     <title>Locadora</title>
 </head>
 <body>
-    <header>SoftMaker Locadora de Automóveis</header>
+    <header>Locadora de Automóveis</header>
     <main>
-        <button type="button" class="button" id="listarCarros">Listar Carros</button>
+        <button type="button" class="button blue mobile" id="listarCarros">Listar Carros</button>
         <table class="tabela" id="tabelaCarros">
             <thead>
                 <tr>
@@ -35,8 +36,8 @@
                     <input type="text" class="tela-campo" id="situaçao" placeholder="Situação do Veículo" required>
                 </form>
                 <footer class="tela-footer">
-                    <button class="button" id="salvar">Salvar</button>
-                    <button class="button" id="cancelar">Cancelar</button>
+                    <button class="button green" id="salvar">Salvar</button>
+                    <button class="button blue" id="cancelar">Cancelar</button>
                 </footer>
             </div>
         </div>
