adicionando links css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/tela.css">
+    <link rel="stylesheet" href="css/tabela.css">
     <title>Locadora</title>
 </head>
 <body>
