adicionando class header-title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Locadora</title>
 </head>
 <body>
-    <header>Locadora de Automóveis</header>
+    <header class="header-title">Locadora de Automóveis</header>
     <main>
         <button type="button" class="button blue mobile" id="listarCarros">Listar Carros</button>
         <table class="tabela" id="tabelaCarros">
