--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
         </table>
-        <div class="tela" id="telaCadastro">
+        <div class="tela" id="tela">
             <div class="tela-conteudo">
                 <header class="tela-header">
                     <h2>Novo Veículo</h2>
@@ -47,5 +47,7 @@
     <footer>
         Copyright &copy; Elthon Silva
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
