alteracao no input

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                
+
             </tbody>
         </table>
         <div class="tela" id="tela">
@@ -35,7 +35,7 @@
                     <span class="tela-close" id="telaClose">&#10006</span>
                 </header>
                 <form class="tela-form" id="form">
-                    <input type="text" class="tela-campo" id="modelo" placeholder="Modelo do Veículo" required>
+                    <input type="text" class="tela-campo" id="modelo" data-index="new" placeholder="Modelo do Veículo" required>
                     <input type="text" class="tela-campo" id="marca" placeholder="Marca do Veículo" required>
                     <input type="text" class="tela-campo" id="tipo" placeholder="Tipo do Veículo" required>
                     <input type="text" class="tela-campo" id="situaçao" placeholder="Situação do Veículo" required>
