chassis code minlength requirement

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <section class="form__chassis-number">
           <label for="chassis-number" class="required">Nº do Chassi:</label>
-          <input type="text" name="chassis-number--add" id="chassis-number--add" maxlength="17" required>
+          <input type="text" name="chassis-number--add" id="chassis-number--add" minlength="17" maxlength="17" required>
         </section>
   
         <section class="form__type">
@@ -94,7 +94,7 @@
       <form method="dialog" class="form" id="car-edit__form">        
         <section class="form__chassis-number">
           <label for="chassis-number" class="required">Nº do Chassi:</label>
-          <input type="text" name="chassis-number--edit" id="chassis-number--edit" maxlength="17" required>
+          <input type="text" name="chassis-number--edit" id="chassis-number--edit" minlength="17" maxlength="17" required>
         </section>
         
         <section class="form__brand">
@@ -149,7 +149,7 @@
       <form method="dialog" class="form" id="car-remove__form">
         <section class="form__chassis-number">
           <label for="chassis-number" class="required">Nº do Chassi:</label>
-          <input type="text" name="chassis-number--remove" id="chassis-number--remove" maxlength="17" required>
+          <input type="text" name="chassis-number--remove" id="chassis-number--remove" minlength="17" maxlength="17" required>
         </section>
 
         <section class="form__btns">
