adicionado algumas coisas para o DOM e arquivo Typescript

--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
             <select id="filter-select">
               <option value="all">Todos</option>
               <option value="done">Chassi</option>
-              <option value="todo">Marca</option>
-              <option value="todo">Tipo</option>
-              <option value="todo">Disponivel</option>
-              <option value="todo">Indisponivel</option>
+              <option value="marca">Marca</option>
+              <option value="tipo">Tipo</option>
+              <option value="disponivel">Disponivel</option>
+              <option value="indisponivel">Indisponivel</option>
             </select>
           </div>
             <br>
           <p>Abaixo alguns templates de automoveis (editaveis) e um pequeno tutorial de como o sistema funciona!</p>
         </div>
+        <img src="/assets/hatch.jpg" id="hatchcarro" alt="">
+        <img src="/assets/sedan.jpg" id="sedancarro" alt="">
+        <img src="/assets/SUV.jpg" id="suvcarro" alt="">
         <div id="todo-list"></div>
       </div>
     </div>
