Criando os cards para listar os carros salvos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <button type="submit" id="buttonSubmit" disabled>Salvar</button>
       </form>
 
+      <button id="list" type="button">Listar</button>
+
+      <div id="cards"></div>
+
     </div>
+    <i class="bi bi-three-dots-vertical"></i>
+
     <script src="./src/main.js" type="module"></script>
 </body>
 </html>
