Implementando função de visualizar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <span>Tipo: </span>
         <select id="type" name="type" class="type">
-          <option value="Hatch">Hatch</option>
-          <option value="Sedan">Sedan</option>
-          <option value="SUV">SUV</option>
+          <option>Hatch</option>
+          <option>Sedan</option>
+          <option>SUV</option>
         </select>
 
         <span>Situação: </span>
@@ -37,6 +37,7 @@
       <button id="list" type="button">Listar</button>
 
       <div id="cards"></div>
+      <div id="car" class="car"></div>
 
     </div>
     <i class="bi bi-three-dots-vertical"></i>
