--- a/index.html
+++ b/index.html
@@ -6,41 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Locadora de Carros</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <body>
-    <header>Locadora de Carros</header>
-    <h2>Adicionar carro</h2>
-    <div>
-      <form>
-        <input placeholder="Identificador único" id="id" class="id" name="id" type="text">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <span class="fs-4">Locadora de Carros</span>
+    </header>
 
-        <input placeholder="Modelo" id="model" name="model" class="model" type="text">
+      <div class="div-form">
+        <h1>Adicione um carro</h1>
+        <form class="formCreate">
 
-        <input placeholder="Marca" id="mark" name="mark" class="mark" type="text">
+          <section class="section-form-1">
+            <label for="id">Identificador único:  </label>
+            <input placeholder="Identificador único" id="id" name="id" class="idInput" type="text">
 
-        <span>Tipo: </span>
-        <select id="type" name="type" class="type">
-          <option>Hatch</option>
-          <option>Sedan</option>
-          <option>SUV</option>
-        </select>
+            <label for="model">Modelo:  </label>
+            <input placeholder="Ex: Novo Range Rover Velar" id="model" name="model" class="modelInput" type="text">
 
-        <span>Situação: </span>
-        <select id="situation" name="situation" class="situation">
-          <option value="Disponível">Disponível</option>
-          <option value="Indisponível">Indisponível</option>
-        </select>
+            <label for="mark">Marca:  </label>
+            <input placeholder="Ex: Land Rover" id="mark" name="mark" class="markInput" type="text">
+          </section>
 
-        <button type="submit" id="buttonSubmit" disabled>Salvar</button>
-      </form>
+          <section class="section-form-2">
 
-      <button id="list" type="button">Listar</button>
+            <label for="type">Tipo: </label>
+            <select id="type" name="type" class="type">
+              <option>Hatch</option>
+              <option>Sedan</option>
+              <option>SUV</option>
+            </select>
 
-      <div id="cards"></div>
+            <label for="situation">Situação: </label>
+            <select id="situation" name="situation" class="situation">
+              <option value="Disponível">Disponível</option>
+              <option value="Indisponível">Indisponível</option>
+            </select>
+
+          </section>
+          <button type="submit" id="buttonSubmit" class="btn btn-info rounded-pill px-3 button-save" disabled>Salvar</button>
+        </form>
+
+      </div>
+
+      <div class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <span id="list" class="nav-link active">Listar</span>
+          </li>
+        </ul>
+      </div>
+
+      <div id="cards" class="cards"></div>
       <div id="car" class="car"></div>
-
-    </div>
-    <i class="bi bi-three-dots-vertical"></i>
 
     <script src="./src/main.js" type="module"></script>
 </body>
